--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.11.1",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.3",
